# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2025 Intel Corporation

find_library(LIBRT rt)

add_library(${PROJECT_NAME} SHARED
  shmringbuf.c
)

list(APPEND HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/shmringbuf.h)

set_target_properties(${PROJECT_NAME} PROPERTIES
  PUBLIC_HEADER ${HEADER_FILES}
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
)

target_include_directories(${PROJECT_NAME} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBRT} safestring_shared)

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
